[gd_scene load_steps=6 format=3 uid="uid://beocvknn737l1"]

[ext_resource type="Script" uid="uid://cxb5w5bkru8dr" path="res://Scripts/UI/Boss_selection_slot.gd" id="1_owa8r"]
[ext_resource type="Texture2D" uid="uid://dgc6yi08arp54" path="res://Sprites/UI/Main_menu/Boss_select.png" id="2_4c5xs"]
[ext_resource type="Texture2D" uid="uid://g7gxqxsmbo7n" path="res://Sprites/UI/Main_menu/Boss_select_background.png" id="3_fh0dg"]
[ext_resource type="Texture2D" uid="uid://c82f37emgffws" path="res://Sprites/UI/Main_menu/Boss_select_hide_look.png" id="4_3f4ep"]
[ext_resource type="Texture2D" uid="uid://cwityd6vvtggn" path="res://Sprites/UI/Main_menu/Boss_select_dimension.png" id="5_xkihd"]

[node name="BossSelectionSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_owa8r")
color = Color(0.254902, 0.545098, 0.819608, 1)

[node name="Body_position" type="Marker2D" parent="."]
position = Vector2(0, -4)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("2_4c5xs")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("3_fh0dg")

[node name="Dimension" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("5_xkihd")

[node name="Hide_boss_look" type="Sprite2D" parent="."]
visible = false
z_index = 55
position = Vector2(0, -24)
texture = ExtResource("4_3f4ep")

[node name="Button_mobile" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -20.0
offset_top = -53.0
offset_right = 20.0
offset_bottom = 5.0
focus_mode = 0
flat = true
